--- a/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
+++ b/Arcanum.UI/Components/Windows/DebugWindows/DebugPanel/DebugPanelGrid.xaml
@@ -45,6 +45,11 @@
                                      Margin = "2"
                                      Padding = "4"
                                      Click = "OpenTestWindowButton_Click" />
+
+            <styleClasses:BaseButton Content = "Open Nexus Accessor"
+                                     Margin = "2"
+                                     Padding = "4"
+                                     Click = "OpenNexusAccessorButton_Click" />
         </StackPanel>
 
         <ContentPresenter Grid.Column = "1"
