--- a/Arcanum.UI/Components/Windows/MinorWindows/ParsingViewer.xaml
+++ b/Arcanum.UI/Components/Windows/MinorWindows/ParsingViewer.xaml
@@ -68,7 +68,7 @@
 
         <TextBlock Grid.Column = "1"
                    Grid.Row = "0"
-                   Text = "Parsed Files"
+                   Text = "Parsed ShownFiles"
                    VerticalAlignment = "Center"
                    HorizontalAlignment = "Left"
                    Margin = "5"
