--- a/Arcanum.UI/Components/Styles/Base/BaseToggleSwitch.xaml
+++ b/Arcanum.UI/Components/Styles/Base/BaseToggleSwitch.xaml
@@ -60,6 +60,9 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="Track" Property="BorderBrush" Value="{StaticResource SelectedControlBorderColorBrush}" />
                         </Trigger>
+                        <Trigger Property="IsKeyboardFocused" Value="True">
+                            <Setter TargetName="Track" Property="BorderBrush" Value="{StaticResource SelectedControlBorderColorBrush}" />
+                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
