Refactor GridSplitter and ToggleSwitch styles; introduce HalfRadiusConverter for improved corner radius handling

--- a/Arcanum.UI/Saving/Window/CreateNewFile.xaml
+++ b/Arcanum.UI/Saving/Window/CreateNewFile.xaml
@@ -8,6 +8,8 @@
                          xmlns:saving="clr-namespace:Arcanum.UI.Saving"
                          mc:Ignorable="d"
                          Title="CreateNewFile"
+                         Width="Auto"
+                         Height="Auto"
                          SizeToContent="WidthAndHeight"
                          WindowStartupLocation="CenterOwner"
                          ResizeMode="NoResize">
