--- a/Arcanum.UI/Saving/Window/SaveWindow.xaml
+++ b/Arcanum.UI/Saving/Window/SaveWindow.xaml
@@ -66,7 +66,8 @@
                                   Width="*"
                                   MinWidth="100" />
                 <ColumnDefinition x:Name="SplitterColumn"
-                                  Width="Auto" />
+                                  Width="Auto"
+                                  />
                 <ColumnDefinition Width="*"
                                   MinWidth="100" />
                 <ColumnDefinition Width="Auto" />
@@ -92,9 +93,8 @@
                 </ListView>
             </Grid>
             <GridSplitter Grid.Column="1"
-                          Width="6"
-                          Margin="2, 4"
-                          HorizontalAlignment="Stretch"
+                          Width="2"
+                          Margin="4, 8"
                           ResizeBehavior="BasedOnAlignment"/>
             <Grid Grid.Column="2">
                 <Grid.RowDefinitions>
@@ -145,9 +145,8 @@
                 </TextBlock>
             </Grid>
             <GridSplitter Grid.Column="3"
-                          Width="6"
-                          Margin="2, 4"
-                          HorizontalAlignment="Stretch"
+                          Width="2"
+                          Margin="4, 8"
                           ResizeBehavior="BasedOnAlignment" />
             <Grid Grid.Column="4">
                 <Grid.RowDefinitions>
